# Buckshot_Roulette

./: .gitignore  CMakeLists.txt  Dockerfile.linux  LICENSE  README.md  autocompile.sh  copyfiles.sh  docker_inner_build.sh  game.h  gameplay.c  gameplay.h  icon.icns  main.c  network.c  network.h  screens.c  screens.h  types.h  ui.c  ui.h
